# zed-restclient

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  extension.toml  extension.wasm  tasks.json
.github/: FUNDING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
languages/http/: config.toml  runnables.scm
sidecar/: Cargo.toml
sidecar/src/: codelens.rs  http_client.rs  main.rs  parser.rs
src/: lib.rs  parser.rs
