[workspace]
members = [
    ".",
    "sidecar"
]

[package]
name = "zed-restclient"
version = "0.1.0"
edition = "2021"
description = "A REST Client for Zed, inspired by vscode-restclient."
authors = ["Daniel Roisch <doani@freenet.de>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.64"
