[package]
name = "sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = "0.4.44"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tower-lsp = "0.20.0"
uuid = { version = "1.22.0", features = ["v4"] }
